# metin-boss-timers

./: .gitignore  .vercelignore  CONTEXT.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-windows.yml
brand/: README.md  build-icon.py  tokens.css  wordmark.html
brand/reference/: palette-type-design-export.html  wordmark-design-export.html
docs/adr/: 0001-cooldowns-are-a-separate-category.md  0002-cooldown-alert-is-best-effort-sound-only.md  0003-overlay-home-is-a-dock-shell.md
public/: privacy.html
scripts/: decode-item-names.mjs  gen-locale-tables.mjs  gen-refs.mjs  lookup-item.mjs  reseed-it-from-dump.mjs
src/: App.tsx  DemoScene.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.template.xml  README.md
src-tauri/src/: lib.rs  store_iap.rs
src/dock-proto/: DockProto.tsx  NOTES.md  dock-proto.css
src/engine/: backup.test.ts  backup.ts  character.test.ts  character.ts  chrome.test.ts  chrome.ts  config.test.ts  config.ts  contentCatalog.test.ts  contentCatalog.ts  contentKeys.ts  cooldown.test.ts  cooldown.ts  cooldownTuning.test.ts  cooldownTuning.ts  entitlement.test.ts  entitlement.ts  hotkey.test.ts  hotkey.ts  locale.test.ts  locale.ts  localeTypes.ts  persist.test.ts  persist.ts  position.test.ts  position.ts  recurring.test.ts  recurring.ts  sequence.test.ts  sequence.ts  settingsLink.test.ts  settingsLink.ts  skillCatalog.test.ts  skillCatalog.ts  sounds.test.ts  (+13 more)
(+63 files in other folders)
