[package]
name = "app"
version = "0.1.0"
description = "Overlay boss respawn timers for Metin2 — a transparent, always-on-top window of draining timer chips driven by global hotkeys."
authors = ["isaobushi"]
license = ""
repository = "https://github.com/isaobushi/metin-boss-timers"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"

# desktop-only: global hotkeys aren't available on mobile targets
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

# Windows-only: the Microsoft Store IAP surface (#58) — license read + purchase dialog
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Services_Store",
  "Foundation",
  "Foundation_Collections",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }
